processed/jira/txt/LU/LU-14460.txt
Key:        LU-14460
Summary:    lustre master build fail on ppcle64
Link:       https://jira.whamcloud.com/browse/LU-14460
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Feng Lei
Reporter:   Minh Diep - TLC
Created:    Mon, 22 Feb 2021 04:02:09 +0000
Updated:    Tue, 9 Nov 2021 03:35:57 +0000
Resolved:   Thu, 11 Mar 2021 05:09:44 +0000
Links:      Related: is related to  LU-10973

--- Description ---
build master on ppc64le with CentOS 8.3 failed

libtool: link: (cd ".libs" && rm -f "liblnetconfig.so.4" && ln -s "liblnetconfig.so.4.0.0" "liblnetconfig.so.4")
libtool: link: (cd ".libs" && rm -f "liblnetconfig.so" && ln -s "liblnetconfig.so.4.0.0" "liblnetconfig.so")
libtool: link: (cd .libs/liblnetconfig.lax/libcfs.a && ar x "/tmp/rpmbuild-lustre-jenkins-0CfRHsoL/BUILD/lustre-2.14.0/lnet/utils/lnetconfig/../../../libcfs/libcfs/.libs/libcfs.a")
libtool: link: ar cru .libs/liblnetconfig.a  liblnetconfig_la-liblnetconfig.o liblnetconfig_la-liblnetconfig_lnd.o liblnetconfig_la-cyaml.o  .libs/liblnetconfig.lax/libcfs.a/libcfs_la-l_ioctl.o .libs/liblnetconfig.lax/libcfs.a/libcfs_la-nidstrings.o .libs/liblnetconfig.lax/libcfs.a/libcfs_la-param.o .libs/liblnetconfig.lax/libcfs.a/libcfs_la-parser.o .libs/liblnetconfig.lax/libcfs.a/libcfs_la-string.o 
libtool: link: ranlib .libs/liblnetconfig.a
libtool: link: rm -fr .libs/liblnetconfig.lax
libtool: link: ( cd ".libs" && rm -f "liblnetconfig.la" && ln -s "../liblnetconfig.la" "liblnetconfig.la" )
lnetctl.c: In function 'jt_calc_service_id':
lnetctl.c:275:39: error: format '%llx' expects argument of type 'long long unsigned int', but argument 2 has type '__u64' {aka 'long unsigned int'} [-Werror=format=]
  printf("service id:\n    value: 0x%llx\n", service_id);
                                    ~~~^     ~~~~~~~~~~
                                    %lx
libtool: link: gcc -fPIC -D_GNU_SOURCE -O2 -g -pipe -Wall -Werror=format-security -Wp,-D_FORTIFY_SOURCE=2 -Wp,-D_GLIBCXX_ASSERTIONS -fexceptions -fstack-protector-strong -grecord-gcc-switches -specs=/usr/lib/rpm/redhat/redhat-hardened-cc1 -specs=/usr/lib/rpm/redhat/redhat-annobin-cc1 -m64 -mcpu=power8 -mtune=power8 -funwind-tables -fstack-clash-protection -g -O2 -Werror -Wl,-z -Wl,relro -Wl,-z -Wl,now -specs=/usr/lib/rpm/redhat/redhat-hardened-ld -Wl,-z -Wl,relro -o wirecheck wirecheck.o  -L. -lkeyutils
libtool: link: gcc -fPIC -D_GNU_SOURCE -O2 -g -pipe -Wall -Werror=format-security -Wp,-D_FORTIFY_SOURCE=2 -Wp,-D_GLIBCXX_ASSERTIONS -fexceptions -fstack-protector-strong -grecord-gcc-switches -specs=/usr/lib/rpm/redhat/redhat-hardened-cc1 -specs=/usr/lib/rpm/redhat/redhat-annobin-cc1 -m64 -mcpu=power8 -mtune=power8 -funwind-tables -fstack-clash-protection -g -O2 -Werror -Wl,-z -Wl,relro -Wl,-z -Wl,now -specs=/usr/lib/rpm/redhat/redhat-hardened-ld -Wl,-z -Wl,relro -o .libs/routerstat routerstat.o  -L. ../../lnet/utils/lnetconfig/.libs/liblnetconfig.so -L../../../libcfs/libcfs -lyaml -lm -lreadline -lkeyutils

--- Comment (gerrit, Tue, 9 Nov 2021 03:35:57 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/44162/

Subject: LU-14460 lnet: fix mismatched printf format

Project: fs/lustre-release

Branch: b2_14

Current Patch Set: 

Commit: 974d2cf8f84c5a5a57bd1d7b97497f36a465a221

--- Comment (gerrit, Tue, 6 Jul 2021 23:56:27 +0000) ---
Gian-Carlo DeFazio (defazio1@llnl.gov) uploaded a new patch: https://review.whamcloud.com/44162

Subject: LU-14460 lnet: fix mismatched printf format

Project: fs/lustre-release

Branch: b2_14

Current Patch Set: 1

Commit: 19fbd5aef6f30723904522c334693bc21a1822fa

--- Comment (pjones, Thu, 11 Mar 2021 05:09:44 +0000) ---
Landed for 2.15

--- Comment (gerrit, Wed, 10 Mar 2021 08:03:24 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/41755/

Subject: LU-14460 lnet: fix mismatched printf format

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 58e05ff5af3d1fcd7b059dc56955a5f8d94db4ab

--- Comment (gerrit, Thu, 25 Feb 2021 00:33:09 +0000) ---
Feng, Lei (flei@whamcloud.com) uploaded a new patch: https://review.whamcloud.com/41755

Subject: LU-14460 lnet: fix mismatched printf format

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 11b2cf598559dfa63ecb4b6ec735806adf6f861b

--- Comment (mdiep, Thu, 25 Feb 2021 00:22:09 +0000) ---
flei, I think we just need to push a patch with that one line change and build on ppc64le

--- Comment (flei, Thu, 25 Feb 2021 00:06:10 +0000) ---
Does it mean that I don't need to work on it repeatly to avoid confliction in the future and duplicate this issue to LU-10973?

--- Comment (simmonsja, Wed, 24 Feb 2021 20:24:52 +0000) ---
A fix for this exist in https://review.whamcloud.com/#/c/38086.
